@@ -1,17 +1,19 @@
 package com.ecommerce.ecommerce_backend.config;
 
-import com.ecommerce.ecommerce_backend.service.JwtService;
 import com.ecommerce.ecommerce_backend.repository.UserRepository;
+import com.ecommerce.ecommerce_backend.service.JwtService;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -21,10 +23,9 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     private final UserRepository userRepository;
 
     @Override
-    protected void doFilterInternal(
-            HttpServletRequest request,
-            HttpServletResponse response,
-            FilterChain filterChain) {
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) {
 
         try {
             String authHeader = request.getHeader("Authorization");
@@ -38,20 +39,32 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             String email = jwtService.extractEmail(token);
 
             if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+
                 var user = userRepository.findByEmail(email);
 
                 if (user.isPresent() && jwtService.isValid(token, email)) {
-                    var authToken = new UsernamePasswordAuthenticationToken(
-                            email,
-                            null,
-                            java.util.Collections.emptyList()
+
+                    String role = user.get().getRole().name();   // USER or ADMIN
+
+                    var authorities = List.of(
+                            new SimpleGrantedAuthority("ROLE_" + role)
                     );
+
+                    UsernamePasswordAuthenticationToken authToken =
+                            new UsernamePasswordAuthenticationToken(
+                                    email,
+                                    null,
+                                    authorities
+                            );
 
                     authToken.setDetails(
                             new WebAuthenticationDetailsSource().buildDetails(request)
                     );
 
                     SecurityContextHolder.getContext().setAuthentication(authToken);
+
+                    System.out.println("Authenticated as: " + email +
+                            " | ROLE_" + role);
                 }
             }
 
@@ -59,9 +72,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
         } catch (Exception e) {
             System.out.println("JWT FILTER ERROR: " + e.getMessage());
-            try {
-                filterChain.doFilter(request, response);
-            } catch (Exception ignored) {}
+            try { filterChain.doFilter(request, response); } catch (Exception ignored) {}
         }
     }
 }
